# noise-camera

./: CMakeLists.txt  Cargo.toml  README.md
src/: app.rs  main.rs  pipeline.rs  settings.rs  utils.rs
src/old/: escapi-main.rs  main.rs
